# strand-braid

./: .gitignore  .gitlab-ci.yml  .gitmodules  .workspace-docs.toml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  Makefile  README.md  azure-pipelines.yml  braid-and-strand-camera.html  braid_3d_tracking.html  braid_calibration.html  braid_configuration_and_launching.html  braid_offline_retracking.html  braid_remote_cameras.html  braid_scaling_reverse_proxy.html  braid_tailscale_remote_access.html  braidz-files.html  calibration.html  fmf_format.html  hardware-selection.html  index.html  installation.html  object_detection.html  parameters_for_object_detection_and_tracking.html  print.html  processing-saved-videos.html  scripting-strand-cam.html  scripting-with-python.html  searchindex.js  searchindex.json  sitemap.txt  sitemap.xml  troubleshooting.html  windows-build-doc.bat
ads-apriltag/: Cargo.toml
ads-apriltag/apriltag-track-movie/: Cargo.toml
ads-apriltag/apriltag-track-movie/src/: lib.rs  main.rs
ads-apriltag/apriltag-track-movie/tests/: test.rs
ads-apriltag/src/: lib.rs
ads-apriltag/tests/: test_detect.rs
ads-webasm/: Cargo.toml
ads-webasm-example/: Cargo.toml  build.bat  build.sh
ads-webasm-example/src/: lib.rs
ads-webasm-example/static/: ads-webasm-example.scss  style.css
ads-webasm/example/: Cargo.toml  README.md  build.bat  build.sh  index.html
ads-webasm/example/src/: lib.rs  main.rs
ads-webasm/example/static/: ads-webasm-example.scss  (+1 more)
ads-webasm/scss/: _base.scss  _colors.scss  _custom_file_upload.scss  _ranged_value.scss  _video_field.scss
ads-webasm/src/: lib.rs  video_data.rs
apriltag/: Cargo.toml  LICENSE.txt  README.md
apriltag/apriltag-track-movie/: Cargo.toml
apriltag/src/: lib.rs
apriltag/tests/: test_detect.rs
basic-frame/: Cargo.toml
basic-frame/src/: dynamic_frame.rs  lib.rs
bg-movie-writer/: Cargo.toml  windows-test.bat
bg-movie-writer/src/: lib.rs  movie_writer_thread.rs
braid/: Cargo.toml  README.md  cal-2018-11-13-good.xml  fishtrax2.toml  home.toml  sample.toml  simple.toml
braid-april-cal/: Cargo.toml  opencv-test.sh
braid-april-cal-webapp/: .gitignore  Cargo.toml  build.bat  build.sh  upload.sh
braid-april-cal-webapp/src/: lib.rs
braid-april-cal-webapp/static/: braid-april-cal-webapp.scss  index.html  style.css
braid-april-cal-webapp/tests/: 22055_apriltags20210824_164901.csv  25042_apriltags20210824_164949.csv  25383_apriltags20210824_165042.csv  integration-test.rs
braid-april-cal/braid-april-cal-webapp/: Cargo.toml  README.md  build.bat  build.sh
braid-april-cal/flytrax-apriltags-calibration/: .gitignore  Cargo.toml  build.rs
braid-april-cal/src/: lib.rs
braid-april-cal/tests/: integration-test.rs
braid-config-data/: Cargo.toml
braid-config-data/src/: lib.rs
braid-http-session/: Cargo.toml
braid-http-session/src/: lib.rs
braid-offline/: .gitignore  Cargo.toml  build.rs
braid-offline/packaging/: .gitignore  Makefile
braid-offline/src/: lib.rs
braid-offline/test_data/: README.md  plot_csv_dir.py  retrack-demo.sh
braid-offline/tests/: test-covariance.rs  test-new-kalmanize-vs-flydra1.rs  test-offline-retrack.rs
braid-process-video/: Cargo.toml  windows-run.bat
braid-process-video/packaging/: .gitignore  Makefile
braid-process-video/src/: argmin.rs  auto_config_generator.rs  braidz_iter.rs  config.rs  ffmpeg_frame_reader.rs  fmf_frame_reader.rs  frame.rs  frame_reader.rs  lib.rs  main.rs  output_braidz.rs  output_types.rs  output_video.rs  peek2.rs  synced_iter.rs  tiny_skia_frame.rs
braid-process-video/tests/: .gitignore  source.json  test-montage.rs
braid/analysis/: braid-analysis-plot-data2d-timeseries.py  braid-analysis-plot-kalman-estimates-timeseries.py  braid-analysis-plot3d.py
braid/braid-config-data/: Cargo.toml
braid/braid-offline/: Cargo.toml  README.md  build.rs
braid/braid-process-video/: Cargo.toml  windows-test.bat
braid/braid-run/: Cargo.toml  build.bat  build.rs  build.sh
braid/braid-sim/: Cargo.toml  README.md  example-sim-imperfect.toml  example-sim-multi.toml  example-sim.toml
braid/braid-types/: Cargo.toml  braidz-schema-versioning.md  braidz-schema.md
braid/braidz-writer/: Cargo.toml
braid/flydra2/: Cargo.toml  build.rs
braid/packaging/: Makefile  compat-script
braid/src/: lib.rs
braid/tracking/: Cargo.toml
braidz-export-rrd/: Cargo.toml
braidz-export-rrd/src/: main.rs  undistortion.rs
braidz-mcsc/: Cargo.toml  package-mcsc-zip.sh
braidz-mcsc/src/: main.rs
braidz-parser/: .gitignore  Cargo.toml
braidz-parser/braidz-chunked-iter/: Cargo.toml  LICENSE-MIT
braidz-parser/braidz-cli/: Cargo.toml
braidz-parser/src/: incremental_parser.rs  lib.rs
braidz-parser/tests/: test.rs
braidz-rerun/: Cargo.toml
braidz-rerun/braidz-export-rrd/: Cargo.toml
braidz-rerun/rerun-braidz-viewer/: Cargo.toml  build.rs
braidz-rerun/src/: lib.rs
braidz-types/: Cargo.toml
braidz-types/src/: lib.rs
braidz-viewer/: Cargo.toml  README.md  build.bat  build.sh  deploy.sh  index.html
braidz-viewer/scss/: braidz-viewer.scss
braidz-viewer/src/: lib.rs  main.rs
braidz-viewer/static/: index.html  manifest.json  style.css
bui-backend-session/: Cargo.toml
bui-backend-session/demo/: Cargo.toml
bui-backend-session/src/: lib.rs
bui-backend-session/types/: Cargo.toml
camcal/: Cargo.toml
camcal/src/: error.rs  lib.rs
camtrig/: Cargo.toml
camtrig-comms/: Cargo.toml  README.md
camtrig-comms/src/: lib.rs
camtrig-firmware/: .gdbinit  Cargo.toml  Makefile  README.md  build.rs  debug-linux.sh  make-linux.sh  stm32f303k8.x  stm32f303re.x
camtrig-firmware/.cargo/: config
camtrig-firmware/src/: led.rs  lib.rs  main.rs  wrapped_tx.rs
camtrig/debian/: camtrig.install  changelog  control  rules
camtrig/src/: lib.rs
ci2-aravis/: Cargo.toml
ci2-aravis/src/: lib.rs
ci2-async/: Cargo.toml
ci2-async/src/: lib.rs
ci2-cli/: Cargo.toml
ci2-cli/src/: ci2-cli.rs
ci2-dc1394/: Cargo.toml  README.md
ci2-dc1394/src/: lib.rs
ci2-flycap2/: Cargo.toml
ci2-flycap2/src/: lib.rs
(+1614 files in other folders)
