[package]
name = "ads-webasm-example"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version="1.60"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.58"
js-sys = "0.3"
chrono = "0.4"
yew = "0.19"
serde = {version = "1.0", default-features = false}
serde_yaml = "0.8"
yew-tincture = "0.1"
log = "0.4"
wasm-logger = "0.2.0"

ads-webasm = {path="../ads-webasm", features=["csv-widget"]}
rust-cam-bui-types = {path="../rust-cam-bui-types"}
