[package]
name = "ads-webasm-example"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys = "0.3"
chrono.workspace = true
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", default-features = false }
serde_yaml = "0.9"
yew-tincture = "0.2.2"
log = "0.4"
wasm-logger = "0.2.0"

ads-webasm = { path = "../ads-webasm", features = ["csv-widget"] }
rust-cam-bui-types = { path = "../rust-cam-bui-types" }
enum-iter = { path = "../enum-iter" }
