[package]
name = "ads-webasm"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
yew.workspace = true
js-sys.workspace = true
gloo-file = "0.2"
wasm-bindgen.workspace = true
serde = "1.0"
serde_yaml.workspace = true
serde_derive = "1.0"
chrono.workspace = true
csv = { version = "1.1", optional = true }

yew-tincture.workspace = true

simple-obj-parse = { path = "../simple-obj-parse", optional = true }
textured-tri-mesh = { path = "../textured-tri-mesh", optional = true }
http-video-streaming-types = { path = "../http-video-streaming/http-video-streaming-types" }
enum-iter.workspace = true
rust-cam-bui-types.workspace = true
bui-backend-session-types = { path = "../bui-backend-session/types" }

[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "EventSource",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
]

[features]
obj = ["simple-obj-parse", "textured-tri-mesh"]
csv-widget = ["csv"]
