[package]
name = "ads-webasm"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
yew.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
csv = { workspace = true, optional = true }
gloo-file = { workspace = true, optional = true }

yew-tincture.workspace = true

simple-obj-parse = { path = "../simple-obj-parse", optional = true }
textured-tri-mesh = { path = "../textured-tri-mesh", optional = true }
enum-iter.workspace = true
rust-cam-bui-types.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "EventSource",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
]

[features]
obj = ["simple-obj-parse", "textured-tri-mesh"]
csv-widget = ["csv", "gloo-file"]
